<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.greenscreens</groupId>
	<artifactId>io.greenscreens.ffm</artifactId>
	<version>1.2.0</version>
	<name>dynamic-ffm</name>
	<description>Java 21 based JEP 454 Foreign Function and Memory API - Alternative to JNi and JNA</description>

	<organization>
		<name>Green Screens Ltd.</name>
		<url>https://www.greenscreens.io</url>
	</organization>

	<licenses>
		<license>
			<name>MIT</name>
			<url>https://github.com/greenscreens-io/dynamic-fmm/blob/master/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:greenscreens-io/dynamic-fmm.git</connection>
		<developerConnection>scm:git:git@github.com:greenscreens-io/dynamic-fmm.git</developerConnection>
		<url>https://github.com/greenscreens-io/dynamic-fmm</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>Github</system>
		<url>https://github.com/greenscreens-io/dynamic-fmm/issues</url>
	</issueManagement>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub greenscreens-io Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/greenscreens-io/dynamic-fmm</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.version>3.11.0</maven.compiler.version>
		<maven.eclipse.plugin>2.10</maven.eclipse.plugin>
		<maven.install.plugin>3.0.0-M1</maven.install.plugin>
		<maven.recources.plugin>3.3.1</maven.recources.plugin>
		<maven.jar.version>3.2.0</maven.jar.version>
		<maven.war.version>3.3.1</maven.war.version>
		<maven.proguard.version>2.3.1</maven.proguard.version>
	</properties>

	<build>
		<finalName>${project.artifactId}</finalName>
		<sourceDirectory>src/main/java</sourceDirectory>

		<plugins>
			<!-- Add sources and javadoc to eclipse project files when
			available. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>${maven.eclipse.plugin}</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<release>21</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<enablePreview>true</enablePreview>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven.recources.plugin}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>		
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
		</dependency>
	</dependencies>
</project>